Codacy coverage report.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,10 @@ xcode_scheme: SecurePropertyStorage-Package
 xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 11
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - bash <(curl -Ls https://coverage.codacy.com/get.sh)
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r Keychain.framework.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r SecurePropertyStorageTests.xctest.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r Storage.framework.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r Inject.framework.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r Singleton.framework.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Swift -r UserDefault.framework.coverage.txt --partial
+  - bash <(curl -Ls https://coverage.codacy.com/get.sh) final
