--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,4 @@
 disabled_rules:
-  - nesting
   - weak_delegate
 opt_in_rules:
   - anyobject_protocol
@@ -30,6 +29,7 @@ opt_in_rules:
   - file_name_no_space
   - first_where
   - flatmap_over_map_reduce
+  - function_default_parameter_at_end
   - identical_operands
   - implicit_return
   - joined_default_parameter
